   * Placing a waypoint on a capturable village will now make the unit pause
     there to capture it (FR#16603)
   * Fixed bug #16653: Avoid markup when calculating the text length for
     ellipse text (Debian bug #547476).
 * Whiteboard:
   * Added cost display for planned recruits and recalls
   * Fixed bug #16554 : Infinite attacks with the whiteboard
 * WML Engine:
   * Added a LOW_MEM define to WML to be able to adapt WML to low memory
     builds.
   * Added event: side turn X
   * Added event: turn X refresh
   * Added [chat] tag for outputting public or private messages to the chat.
   * Added events: turn end and turn X end_text
   * Added events: side turn end, side X turn end, side turn X end,
     and side X turn Y end
   * Added "variations" key and "@V" symbol in [terrain_graphics] (syntax is
     not final, and may change later)
   * Fixed a bug causing the PUT_TO_RECALL_LIST macro to freeze the game.
   * Modified [set_variable] "divide" so that it always performs a
     floating-point divide.
   * Allow time_area to define local time of day on map border (bug #16508)
   * Fix time of day not changing in time area (bug #16584)
   * Allowed negative defense values as a way to set upper bounds,
     e.g. village=-60 means that a unit cannot have less than 60 def (more
     than 40% def) on terrains containing villages.
 * Miscellaneous and bug fixes:
   * Removed: statistics upload code.
   * Changed: compiler mode set to c++98
   * Optimize terrain rules which speed up cache creation and loading
   * Optimize rendering of flying units
   * Fix crash when attacking in fog (using teleport+attack to a fogged village)
   * Fixed a bug causing turn counter in the objectives dialog to duplicate when
     the objectives are viewed several times.
   * Replace "working peasant" (indicating missing images in debug mode) by
     half-transparent "Image not found"
   * Improved rendering algorithm: reduced memory requirements and a much faster