@@ -102,6 +102,7 @@ Version 1.9.0+svn:
    * Added cost display for planned recruits and recalls
    * Fixed bug #16554 : Infinite attacks with the whiteboard
  * WML Engine:
+   * Added tag [kill][secondary_unit] for specifying the killing unit.
    * Added a LOW_MEM define to WML to be able to adapt WML to low memory
      builds.
    * Added event: side turn X
